ci: set deploy script

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://jenahajek.github.io/calendar-builder",
   "name": "calendar-react-generator",
   "version": "0.1.0",
   "private": true,
